--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<img src="images/ijn_destoyer.png" alt="duck" class="inline"/>
 </body>
 </html>
