--- a/index.html
+++ b/index.html
@@ -2,5 +2,14 @@
 <html>
 <body>
 <img src="images/ijn_destroyer.jpg" alt="duck" class="inline"/>
+    <script>
+  function play(){
+       var audio = document.getElementById("audio");
+       audio.play();
+                 }
+   </script>
+
+<input type="button" value="PLAY"  onclick="play()">
+<audio id="audio" src="images/combobreak.mp3" ></audio>
 </body>
 </html>
