--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="images/ijn_destroyer.jpg" alt="duck" class="inline"/>
+<img src="images/ijn_destroyer.jpg" alt="duck" class="inline" onclick="play()"/>
     <script>
   function play(){
        var audio = document.getElementById("audio");
@@ -9,7 +9,7 @@
                  }
    </script>
 
-<input type="button" value="PLAY"  onclick="play()">
+<!--input type="button" value="PLAY"  onclick="play()"-->
 <audio id="audio" src="images/combobreak.mp3" ></audio>
 </body>
 </html>
