--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="images/ijn_destroyer.jpg" alt="duck" class="inline" onclick="play()"/>
+<img src="images/ijn_destroyer.jpg" alt="duck" class="inline" onmouseover="play()" onclick="play()"/>
     <script>
   function play(){
        var audio = document.getElementById("audio");
